feat: regular/auth-findOneテスト